--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>title page</title>
+    <title>Ray's Profile Page</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script>
       function lighter(x) {
